<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_home_background"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context=".LoginHomeActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:gravity="center"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.5"
        android:gravity="center"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/username_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#484848"
                android:gravity="center"
                android:hint="@string/hintEmail"
                android:imeOptions="actionNext"
                android:padding="20dp"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:textColorHighlight="#cccccc" />

            <ImageView
                android:id="@+id/warning_empty_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_warning"
                android:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/password_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#484848"
                android:gravity="center"
                android:hint="@string/hintPassword"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:padding="20dp"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:textColorHighlight="#cccccc" />

            <ImageView
                android:id="@+id/warning_empty_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_warning"
                android:visibility="gone" />
        </RelativeLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:background="@drawable/button_background"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvBreakLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:ellipsize="end"
            android:text="@string/break_login"
            android:textColor="@color/text_green"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvCannotLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:ellipsize="end"
            android:text="@string/cant_login"
            android:textColor="@color/text_green"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tvDonotHaveCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:ellipsize="end"
            android:text="@string/dont_have_card"
            android:textColor="@color/text_green"
            android:textSize="13sp" />
    </LinearLayout>

</LinearLayout>